# job-tracker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 07c3b8e0b446_add_recruiter_and_status_tracking.py  20507294d596_add_unique_constraint_for_applications.py  6c559809ae70_create_initial_tables.py  a4e9f4c6d2b1_phase2_application_fields_and_events.py  e29f7a9f5c31_ensure_recruiter_indexes.py
app/: main.py
app/api/: deps.py
app/api/v1/: application_events.py  applications.py  applications_analytics.py  auth.py
app/core/: config.py  database.py  rate_limiter.py  security.py
app/models/: __init__.py  application.py  application_event.py  company.py  user.py
app/schemas/: analytics.py  application.py  application_event.py  application_note.py  auth.py  stats.py
app/services/: application_analytics_service.py  application_event_service.py  application_service.py
app/tests/: conftest.py  test_access_control.py  test_e2e_auth_and_applications.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: token.ts
frontend/src/components/: AppLayout.tsx  ProtectedRoute.tsx
frontend/src/pages/: AnalyticsPage.tsx  ApplicationDetailPage.tsx  ApplicationsPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: api.ts
job_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
