[project]
name = "job-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",

  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",

  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "email-validator>=2.0",

  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",

  "python-multipart>=0.0.9",

  "bcrypt>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "httpx>=0.26",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401"]
